# rusty-results

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
rusty_results/: __init__.py  result.py
tests/: test_main.py
