[tool.poetry]
name = "rusty-results"
version = "0.1.0"
description = ""
authors = ["Jevgeni Tarassov <jevgeni@tarassov.ch>"]
readme = "README.md"
packages = [{include = "rusty_results"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
