[tool.poetry]
name = "jevgeni-tarassov-rusty-results"
version = "1.0.0"
description = "Result class similar to Rust's Result"
authors = ["Jevgeni Tarassov <jevgeni@tarassov.ch>"]
readme = "README.md"
packages = [{include = "rusty_results"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
